// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timer should render a start button in an inactive state 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Timer
    pauseTimer={[Function]}
    startTimer={[Function]}
    startedAt={null}
    stopTimer={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        false,
        <button
          onClick={[Function]}
>
          Start
</button>,
      ],
      "className": "Timer",
    },
    "ref": null,
    "rendered": Array [
      false,
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "Start",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Start",
        "type": "button",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          false,
          <button
            onClick={[Function]}
>
            Start
</button>,
        ],
        "className": "Timer",
      },
      "ref": null,
      "rendered": Array [
        false,
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "Start",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Start",
          "type": "button",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Timer should render an active timer and a stop button 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Timer
    pauseTimer={[Function]}
    startTimer={[Function]}
    startedAt={"2017-01-01T05:00:00.000Z"}
    stopTimer={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <TimerDisplay
          startedAt={"2017-01-01T05:00:00.000Z"}
/>,
        <button
          onClick={[Function]}
>
          Stop
</button>,
      ],
      "className": "Timer",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "startedAt": "2017-01-01T05:00:00.000Z",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "Stop",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Stop",
        "type": "button",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <TimerDisplay
            startedAt={"2017-01-01T05:00:00.000Z"}
/>,
          <button
            onClick={[Function]}
>
            Stop
</button>,
        ],
        "className": "Timer",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "startedAt": "2017-01-01T05:00:00.000Z",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "Stop",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Stop",
          "type": "button",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
